adicionando site sobre musculação

--- a/index.html
+++ b/index.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>blog sobre musculação</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Musculação e Academia</title>
+  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  conheça tudo sobre musculação
-  <h1>
-    <table>
-      MUSCULAÇÃO CONHEÇA OS BENEFICIOS DELA:
-    </table>
 
-    <p> controle da glicose </p>
-    <p>ganho e manutenção de massa muscular</p>
-    <p>melhoria do equilíbrio</p>
-    <p>aceleração do metabolismov</p>
+  <header>
+    <h1>Musculação e Academia</h1>
+    <p>Cuide de sua saúde e alcance seus objetivos!</p>
+  </header>
 
-  </h1>
-  <script src="script.js"></script>
+  <div class="container">
+    <h2>Treinos e Dicas</h2>
+    <div class="content">
+      <div class="card">
+        <h3>Treino para Iniciantes</h3>
+        <p>Comece com exercícios básicos para fortalecer a musculatura e ganhar resistência. Foque em treino de corpo
+          inteiro, com ênfase em exercícios de forma simples.</p>
+      </div>
+      <div class="card">
+        <h3>Hipertrofia</h3>
+        <p>Para aumentar a massa muscular, foque em treinos com pesos maiores e mais repetições. Não se esqueça de dar
+          tempo suficiente para a recuperação muscular.</p>
+      </div>
+      <div class="card">
+        <h3>Alongamento e Mobilidade</h3>
+        <p>Alongue-se antes e depois dos treinos. Isso ajuda na recuperação e prevenção de lesões, além de melhorar a
+          flexibilidade e a postura.</p>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <p>&copy; 2025 Musculação e Academia - Todos os direitos reservados</p>
+  </footer>
+
 </body>
-
 
 </html>
